// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmpSocialEmbed should render correctly 1`] = `
<div>
  <a
    href="#skip-%provider%-post-by-%author%"
  >
    Skip %provider% post by %author%
  </a>
  <h1>
    01234
  </h1>
  <p
    id="skip-%provider%-post-by-%author%"
  >
    End of %provider% post by %author%
  </p>
</div>
`;

exports[`CanonicalSocialEmbed should render correctly 1`] = `
<div>
  <a
    href="#skip-%provider%-post-by-%author%"
  >
    Skip %provider% post by %author%
  </a>
  <div>
    <h1>
      Content.
    </h1>
  </div>
  <p
    id="skip-%provider%-post-by-%author%"
  >
    End of %provider% post by %author%
  </p>
</div>
`;
